# scada-gateway-simulator

./: .gitignore  CMakeLists.txt  README.md
scripts/: test-client.py
src/: CircularBuffer.hpp  NetworkServer.hpp  TelemetryPacket.hpp  main.cpp
